[gd_scene load_steps=2 format=3 uid="uid://iay0ou6ywg7"]

[ext_resource type="Script" path="res://HUD.gd" id="1_script"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 450.0
offset_top = 50.0
offset_right = 650.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 32
text = "SCORE: 0"

[node name="NextLabel" type="Label" parent="."]
offset_left = 450.0
offset_top = 150.0
offset_right = 650.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 24
text = "NEXT:"

[node name="GameOverRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="GameOverLabel" type="Label" parent="GameOverRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "GAME OVER
Press Enter"
horizontal_alignment = 1

[node name="NextPieceDisplay" type="Node2D" parent="."]
position = Vector2(450, 200)
